--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ java {
 }
 
 application {
-    mainClass.set(project.findProperty("mainClass") ?: "com.ursine.calendar.Main"))
+    mainClass.set(project.findProperty("mainClass") ?: "com.ursine.calendar.Main")
 }
 
 repositories {
