chore(fix): cleanup

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
-version=1.0.0-SNAPSHOT
+version=1.1.0-SNAPSHOT
 group=com.ursineenterprises
-description="A tool to generate Google Calendar events from a CSV file."
-mainClass="com.ursineenterprises.calendareventsgenerator.CalendarEventsGenerator"
+mainClass=com.ursineenterprises.calendareventsgenerator.CalendarEventsGenerator
 archiveBaseName=calendar-events-generator
+description=A tool to generate Google Calendar events from a JSON file.
+
